# notify-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  LICENSE  NOTIFICATION_SCHEMA.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  USAGE_GUIDE.md  main.py  mkdocs.yml  pyproject.toml
.claude/commands/: notify-alert.md  notify-recent.md  notify-subscribe.md
.github/workflows/: docs.yml
.vibe/: development-plan-default.md
docs/: API.md  ARCHITECTURE.md  MCP_PRIMITIVES.md  STORAGE_GUIDE.md  index.md
docs/about/: changelog.md  contributing.md  roadmap.md
docs/api-reference/: configuration.md  index.md  prompts.md  resources.md  tools.md
docs/architecture/: overview.md  pub-sub-model.md  storage.md
docs/examples/: advanced-workflows.md  basic-usage.md  integration.md
docs/getting-started/: configuration.md  index.md  installation.md  quick-start.md
docs/guides/: best-practices.md  http-deployment.md  storage-configuration.md  team-collaboration.md  troubleshooting.md
docs/use-cases/: architecture-decisions.md  cross-platform-ai.md  incident-response.md  index.md  project-updates.md  real-world-scenarios.md  team-coordination.md
examples/: README.md  basic_client.py  http_client_example.py  run_http_server.py  team_workflow.py
schemas/: notification-schema.json
site/: 404.html  index.html  sitemap.xml
site/API/: index.html
site/ARCHITECTURE/: index.html
site/MCP_PRIMITIVES/: index.html
site/NOTIFICATION_SCHEMA/: index.html
site/STORAGE_GUIDE/: index.html
site/USAGE_GUIDE/: index.html
site/about/changelog/: index.html
site/about/contributing/: index.html
site/api-reference/: index.html
site/getting-started/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
site/use-cases/: index.html
src/notify_mcp/: __init__.py  __main__.py  server.py
tests/: test_filters.py  test_http_transport.py  test_managers.py  test_models.py  test_sqlite_storage.py  test_storage.py
tests/manual_tests/: .mcp.json  test.scenarios
(+43 files in other folders)
